# seyyestyq-aie-student-damir

.claude/: settings.json
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW03/eda-cli/reports/: report.md
homeworks/HW03/eda-cli/src/eda_cli/: core.py
homeworks/HW04/eda-cli/: README.md  S04-brief.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: api.py  cli.py
homeworks/HW04/eda-cli/tests/: test_core.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW14/: HW14.ipynb  report.md
project/: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  report.md  requirements.txt  self-checklist.md
project/artifacts/: README.md  drop_forecaster.cbm  model_metrics.md
project/configs/: .env.example  README.md
project/data/: README.md
project/data/sample/: README.md  (+1 more)
project/notebooks/: 01_eda_and_data_audit.ipynb  02_model_comparison.ipynb  03_system_evaluation_and_demo.ipynb  README.md
project/src/: README.md  __init__.py  api.py  config.py  data_loader.py  model.py  train.py
project/tests/: README.md  test_model.py
(+17 files in other folders)
